--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
